[package]
name = "eval"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
csv = "1.3.1"
env_logger = "0.11.5"
log = "0.4.22"
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.134"
serde_yaml = "0.9.34"
tabled = "0.17.0"
